<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2019 Asylum

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Alert slider proc nodes paths. -->
    <string name="alert_slider_state_path">/sys/class/switch/tri-state-key/state</string>
    <string name="alert_slider_uevent_match_path">DEVPATH=/devices/virtual/switch/tri-state-key</string>

    <!-- Buttons customizations. -->
    <string name="screen_off_gesture_title">Screen off gestures</string>
    <string name="gesture_up_swipe_title">One finger up swipe</string>
    <string name="gesture_down_swipe_title">One finger down swipe</string>
    <string name="gesture_left_swipe_title">One finger left swipe</string>
    <string name="gesture_right_swipe_title">One finger right swipe</string>
    <string name="gesture_arrow_down_title">Arrow down</string>
    <string name="gesture_arrow_left_title">Arrow left</string>
    <string name="gesture_arrow_right_title">Arrow right</string>
    <string name="gesture_arrow_up_title">Arrow up</string>
    <string name="gesture_circle_title">Circle</string>
    <string name="gesture_double_swipe_title">Double finger swipe down</string>
    <string name="gesture_double_tap_title">Double tap</string>
    <string name="gesture_s_title">Draw S</string>
    <string name="gesture_m_title">Draw M</string>
    <string name="gesture_w_title">Draw W</string>
    <string name="buttons_title">Hardware buttons</string>
    <string name="left_button">Left button</string>
    <string name="home_button">Home button</string>
    <string name="right_button">Right button</string>
</resources>
